[gd_scene load_steps=12 format=3 uid="uid://cbxra2awmftww"]

[ext_resource type="Script" path="res://assets/gui/controls.gd" id="1_pqgy0"]
[ext_resource type="FontFile" uid="uid://bspyg6cma6ji8" path="res://assets/gui/font.ttf" id="1_r0xyj"]
[ext_resource type="LabelSettings" uid="uid://1phn4kwkxmof" path="res://assets/gui/label_settings.tres" id="2_0ldlf"]
[ext_resource type="Texture2D" uid="uid://df564q11ccfgi" path="res://assets/important/background.png" id="3_mnn0o"]

[sub_resource type="FontVariation" id="FontVariation_qhjdy"]
base_font = ExtResource("1_r0xyj")
spacing_glyph = -2

[sub_resource type="LabelSettings" id="LabelSettings_wa7tt"]
font = SubResource("FontVariation_qhjdy")
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3g4nl"]

[sub_resource type="Animation" id="Animation_5afgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade/black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_i2q6o"]
resource_name = "black"
length = 0.25
loop_mode = 1

[sub_resource type="Animation" id="Animation_drj7n"]
resource_name = "clear"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade/black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tvbfg"]
_data = {
"RESET": SubResource("Animation_5afgr"),
"black": SubResource("Animation_i2q6o"),
"clear": SubResource("Animation_drj7n")
}

[node name="controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqgy0")

[node name="controls" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 57.0
offset_right = 75.0
offset_bottom = 164.0
grow_horizontal = 2
text = "Game Controls:

WASD: Move
Arrows: Attack
1-7: Select Weapon
R (Hold): Reset
ESC: Pause
Tab: Minimap
Tab (Paused): Swap Hotbar
"
label_settings = SubResource("LabelSettings_wa7tt")
horizontal_alignment = 1

[node name="main" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -109.0
offset_right = 28.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_3g4nl")
flat = true

[node name="Label" type="Label" parent="main"]
layout_mode = 0
offset_top = -13.0
offset_right = 56.0
offset_bottom = 10.0
text = "Main Menu"
label_settings = ExtResource("2_0ldlf")
horizontal_alignment = 1

[node name="fade" type="CanvasLayer" parent="."]
layer = 2

[node name="black" type="ColorRect" parent="fade"]
modulate = Color(1, 1, 1, 0)
top_level = true
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade/black"]
reset_on_save = false
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_tvbfg")
}
autoplay = "RESET"

[node name="background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
texture = ExtResource("3_mnn0o")
centered = false

[connection signal="focus_entered" from="main" to="." method="_on_main_focus_entered"]
[connection signal="focus_exited" from="main" to="." method="_on_main_focus_exited"]
[connection signal="pressed" from="main" to="." method="_on_main_pressed"]
